--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mars-is-awesome",
-  "homepage": "http://eugz.github.io/mars-is-awesome",
+  "homepage": "https://EugZ.github.io/mars-is-awesome",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
